--- a/mardi gras project/css/style.css
+++ b/mardi gras project/css/style.css
@@ -126,7 +126,7 @@ h2 {
   height: 80vh;
 }
 
-@media (max-width: 991px) {
+@media (max-width: 993px) {
   .imgim {
     height: auto;
   }
@@ -137,10 +137,6 @@ h2 {
   .faqimg {
     width: 30%;
     height: auto;
-  }
-  .tikun {
-    width: 100%;
-    height: 100%;
   }
   .imgims {
     width: 100%;
@@ -176,18 +172,26 @@ p {
   font-size: 1em;
 }
 
-.w-50 .mayor {
-  width: 35%;
-  height: 30vh;
+.w-50 {
+  margin: 0 auto;
+  border: 2px dotted #9453A6;
+  height: auto;
+  padding: 0.5%;
 }
 
-.w-50 .info {
+.mayor {
+  border: none;
+  margin-top: 3%;
+  margin-bottom: 0;
+}
+
+.info {
   text-align: left;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
 
-.w-50 h3 {
+h3 {
   font-size: 1.5em;
   font-family: "Pattaya";
   color: #9453A6;
@@ -246,21 +250,120 @@ p {
 }
 
 .imgims {
-  width: 218px;
-  height: 220px;
-  padding: 1px;
+  width: 100%;
+  height: 30vh;
   border: 2px dotted #F2CC0F;
   border-radius: 5%;
+  padding-left: 0;
+  padding-right: 0;
 }
 
 .tikun {
-  width: 100%;
-  height: 100%;
-  margin: 0 auto;
+  border: 2px solid black;
 }
 
 .logo {
   width: 100px;
   height: 100px;
+}
+
+.gridtemp {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[4];
+      grid-template-columns: repeat(4, 1fr);
+  -ms-grid-rows: auto;
+      grid-template-rows: auto;
+  grid-gap: 0.5%;
+}
+
+.gridtemp #item {
+  -ms-grid-row: 3;
+  -ms-grid-row-span: 1;
+  grid-row: 3/4;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 4;
+  grid-column: 1/5;
+}
+
+.gridtemp #item1 {
+  -ms-grid-row: 6;
+  -ms-grid-row-span: 2;
+  grid-row: 6/8;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1/2;
+}
+
+.gridtemp #item2 {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1/2;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-column: 1/3;
+}
+
+.gridtemp #item3 {
+  -ms-grid-row: 7;
+  -ms-grid-row-span: 2;
+  grid-row: 7/9;
+  -ms-grid-column: 4;
+  -ms-grid-column-span: 1;
+  grid-column: 4/5;
+}
+
+.gridtemp #item4 {
+  -ms-grid-row: 9;
+  -ms-grid-row-span: 1;
+  grid-row: 9/10;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-column: 1/3;
+}
+
+.gridtemp #item5 {
+  -ms-grid-row: 9;
+  -ms-grid-row-span: 1;
+  grid-row: 9/10;
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 2;
+  grid-column: 3/5;
+}
+
+.gridtemp #item6 {
+  -ms-grid-row: 5;
+  -ms-grid-row-span: 2;
+  grid-row: 5/7;
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 2;
+  grid-column: 3/5;
+}
+
+.gridtemp #item7 {
+  -ms-grid-row: 8;
+  -ms-grid-row-span: 1;
+  grid-row: 8/9;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 2;
+  grid-column: 2/4;
+}
+
+.gridtemp #item8 {
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  grid-row: 2/3;
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 2;
+  grid-column: 3/5;
+}
+
+.item1 {
+  width: 100%;
+  height: 60vh;
+  border: 2px dotted #F2CC0F;
+  border-radius: 5%;
+  padding-left: 0;
+  padding-right: 0;
 }
 /*# sourceMappingURL=style.css.map */
