--- a/mardi gras project/sass/_extend.scss
+++ b/mardi gras project/sass/_extend.scss
@@ -115,7 +115,7 @@ h2 {
     height: 80vh;
 }
 
-@media (max-width: 991px) {
+@media (max-width: 993px) {
     .imgim {
         height: auto;
     }
@@ -128,11 +128,6 @@ h2 {
     .faqimg {
         width: 30%;
         height: auto;
-    }
-
-    .tikun {
-        width: 100%;
-        height: 100%;
     }
 
     .imgims {
@@ -172,21 +167,27 @@ p {
 }
 
 .w-50 {
-    .mayor {
-        width: 35%;
-        height: 30vh;
-    }
+    margin: 0 auto;
+    border: 2px dotted $homecolor;
+    height: auto;
+    padding: 0.5%;
+}
 
-    .info {
-        text-align: left;
-        box-sizing: border-box;
-    }
+.mayor {
+    border: none;
+    margin-top: 3%;
+    margin-bottom: 0;
+}
 
-    h3 {
-        font-size: 1.5em;
-        font-family: $hfont;
-        color: $homecolor;
-    }
+.info {
+    text-align: left;
+    box-sizing: border-box;
+}
+
+h3 {
+    font-size: 1.5em;
+    font-family: $hfont;
+    color: $homecolor;
 }
 
 .grouped_elements {
@@ -243,20 +244,81 @@ p {
 }
 
 .imgims {
-    width: 218px;
-    height: 220px;
-    padding: 1px;
+    width: 100%;
+    height: 30vh;
     border: 2px dotted $mediacolor;
     border-radius: 5%;
+    padding-left: 0;
+    padding-right: 0;
 }
 
 .tikun {
-    width: 100%;
-    height: 100%;
-    margin: 0 auto;
+    border: 2px solid black;
+
 }
 
 .logo {
     width: 100px;
     height: 100px;
+}
+
+.gridtemp {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: auto;
+    grid-gap: 0.5%;
+
+    #item {
+        grid-row: 3/4;
+        grid-column: 1/5;
+    }
+
+    #item1 {
+        grid-row: 6/8;
+        grid-column: 1/2;
+    }
+
+    #item2 {
+        grid-row: 1/2;
+        grid-column: 1/3;
+    }
+
+    #item3 {
+        grid-row: 7/9;
+        grid-column: 4/5;
+    }
+
+    #item4 {
+        grid-row: 9/10;
+        grid-column: 1/3;
+    }
+
+    #item5 {
+        grid-row: 9/10;
+        grid-column: 3/5;
+    }
+
+    #item6 {
+        grid-row: 5/7;
+        grid-column: 3/5;
+    }
+
+    #item7 {
+        grid-row: 8/9;
+        grid-column: 2/4;
+    }
+
+    #item8 {
+        grid-row: 2/3;
+        grid-column: 3/5;
+    }
+}
+
+.item1 {
+    width: 100%;
+    height: 60vh;
+    border: 2px dotted $mediacolor;
+    border-radius: 5%;
+    padding-left: 0;
+    padding-right: 0;
 }
