--- a/mardi gras project/sass/_extend.scss
+++ b/mardi gras project/sass/_extend.scss
@@ -26,7 +26,7 @@ body {
     background-position-x: center;
     background-position-y: center;
     z-index: -1;
-    width: 70%;
+    // width: 70%;
     height: auto;
     margin: 0 auto;
     background-color: hsla(0, 0%, 96%, 0.849);
