--- a/mardi gras project/css/style.css
+++ b/mardi gras project/css/style.css
@@ -185,18 +185,18 @@ h2 {
     background-color: #F2CC0F;
     color: white;
     font-family: "Pattaya";
-    font-size: 2em;
+    font-size: 1em;
     border-radius: 1.5em;
-    position: relative;
-    left: 0;
+    position: absolute;
+    left: 15%;
   }
   .form1 .reset {
     background-color: #8CBF3F;
     color: white;
     font-family: "Pattaya";
-    font-size: 2em;
-    position: relative;
-    left: 30%;
+    font-size: 1em;
+    position: absolute;
+    right: 15%;
   }
   p {
     font-family: "Roboto Slab";
