--- a/mardi gras project/sass/_extend.scss
+++ b/mardi gras project/sass/_extend.scss
@@ -172,6 +172,8 @@ h2 {
             border-radius: 1.5em;
             position: absolute;
             left: 15%;
+            width: 65px;
+            height: 30px;
         }
 
         .reset {
@@ -181,6 +183,8 @@ h2 {
             font-size: 1em;
             position: absolute;
             right: 15%;
+            width: 65px;
+            height: 30px;
         }
     }
 
