--- a/mardi gras project/css/style.css
+++ b/mardi gras project/css/style.css
@@ -446,9 +446,9 @@ p {
 
 label {
   text-align: center;
-  font-size: 1.5em;
+  font-size: 2em;
   font-family: "Pattaya";
-  color: #9453A6;
+  color: #0D0D0D;
 }
 
 textarea,
