--- a/mardi gras project/sass/_extend.scss
+++ b/mardi gras project/sass/_extend.scss
@@ -399,9 +399,9 @@ p {
 
 label {
     text-align: center;
-    font-size: 1.5em;
+    font-size: 2em;
     font-family: $hfont;
-    color: $homecolor;
+    color: $contactcolor;
 }
 
 textarea,
