--- a/mardi gras project/css/style.css
+++ b/mardi gras project/css/style.css
@@ -448,7 +448,7 @@ label {
   text-align: center;
   font-size: 2em;
   font-family: "Pattaya";
-  color: #0D0D0D;
+  color: #F2F2F2;
 }
 
 textarea,
