--- a/mardi gras project/sass/_extend.scss
+++ b/mardi gras project/sass/_extend.scss
@@ -401,7 +401,7 @@ label {
     text-align: center;
     font-size: 2em;
     font-family: $hfont;
-    color: $contactcolor;
+    color: $FAQcolor;
 }
 
 textarea,
