--- a/mardi gras project/css/style.css
+++ b/mardi gras project/css/style.css
@@ -202,6 +202,12 @@ h2 {
     width: 65px;
     height: 30px;
   }
+  .form1 label {
+    text-align: center;
+    font-size: 2em;
+    font-family: "Pattaya";
+    color: #F2F2F2;
+  }
   p {
     font-family: "Roboto Slab";
     text-align: center;
@@ -406,6 +412,12 @@ p {
     font-family: "Pattaya";
     font-size: 2em;
   }
+  form label {
+    text-align: center;
+    font-size: 2em;
+    font-family: "Pattaya";
+    color: #9453A6;
+  }
   p {
     font-family: "Roboto Slab";
     text-align: center;
@@ -442,13 +454,6 @@ p {
     font-family: "Pattaya";
     color: #9453A6;
   }
-}
-
-label {
-  text-align: center;
-  font-size: 2em;
-  font-family: "Pattaya";
-  color: #F2F2F2;
 }
 
 textarea,
