--- a/mardi gras project/css/style.css
+++ b/mardi gras project/css/style.css
@@ -161,7 +161,11 @@ h2 {
   }
   .imgims {
     width: 100%;
-    height: 100%;
+    height: 10vh;
+    border: 2px dotted #F2CC0F;
+    border-radius: 5%;
+    padding-left: 0;
+    padding-right: 0;
   }
   .logo {
     display: none;
@@ -240,6 +244,14 @@ h2 {
     font-size: 1.5em;
     font-family: "Pattaya";
     color: #9453A6;
+  }
+  .item1 {
+    width: 100%;
+    height: auto;
+    border: 2px dotted #F2CC0F;
+    border-radius: 5%;
+    padding-left: 0;
+    padding-right: 0;
   }
 }
 
@@ -451,6 +463,22 @@ p {
     font-family: "Pattaya";
     color: #9453A6;
   }
+  .imgims {
+    width: 100%;
+    height: 30vh;
+    border: 2px dotted #F2CC0F;
+    border-radius: 5%;
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .item1 {
+    width: 100%;
+    height: 60vh;
+    border: 2px dotted #F2CC0F;
+    border-radius: 5%;
+    padding-left: 0;
+    padding-right: 0;
+  }
 }
 
 textarea,
@@ -512,15 +540,6 @@ input {
   padding: 0.5em;
   border-radius: 1.5em;
   background-color: rgba(245, 245, 245, 0.849);
-}
-
-.imgims {
-  width: 100%;
-  height: 30vh;
-  border: 2px dotted #F2CC0F;
-  border-radius: 5%;
-  padding-left: 0;
-  padding-right: 0;
 }
 
 .logo {
@@ -617,14 +636,5 @@ input {
   -ms-grid-column: 3;
   -ms-grid-column-span: 2;
   grid-column: 3/5;
-}
-
-.item1 {
-  width: 100%;
-  height: 60vh;
-  border: 2px dotted #F2CC0F;
-  border-radius: 5%;
-  padding-left: 0;
-  padding-right: 0;
 }
 /*# sourceMappingURL=style.css.map */
